docs(example): prevent overflow in default-theme (#5441)
You can see an overflow before this PR by selecting `apple` in the RefinementList and seeing it going well past the container size.

--- a/examples/react-hooks/default-theme/src/App.css
+++ b/examples/react-hooks/default-theme/src/App.css
@@ -16,6 +16,10 @@ body {
   margin: 0 auto;
 }
 
+img {
+  max-width: 100%;
+}
+
 .Container {
   display: grid;
   align-items: flex-start;
